# CPPCode

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  exceed.cpp  getInfo.cpp  limits.cpp  main.cpp
